--- a/client/views/main_views/users/profile.html
+++ b/client/views/main_views/users/profile.html
@@ -1,7 +1,7 @@
 <template name="profileMainView">
    <!-- Page heading -->
    {{#if me}}
-      {{> render component="pageHeading" title='Profile'}}
+      {{> render component="pageHeading" title='My Profile'}}
    {{else}}
       {{> render component="pageHeading" title=name category="Settings"}}
    {{/if}}
