added comments panel

--- a/client/lib/components/suppliers/profile/products/item/view.html
+++ b/client/lib/components/suppliers/profile/products/item/view.html
@@ -2,7 +2,7 @@
   <tr>
     <td>{{state$product.code}}</td>
     <td>{{state$product.description}}</td>
-    <td>14.07.2014 10:16:36</td>
+    <td>{{dateFormat state$product.createdOn}}</td>
     <td>{{state$product.portionOrdered}}</td>
     <td>$ {{state$product.costPerPortion}}</td>
   </tr>
