--- a/client/lib/components/suppliers/profile/profile/view.html
+++ b/client/lib/components/suppliers/profile/profile/view.html
@@ -25,6 +25,9 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          {{> render component="commentsPanel" id=state$supplierId type='supplier'}}
+        </div>
       </div>
     </div>
   </div>
