added suppliers route

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -91,6 +91,9 @@
                 <li class="{{isActiveRoute name='supplierOrdering'}}">
                   <a href="/stocktake/order/receipts">Receive Orders</a>
                 </li> 
+                <li class="{{isActiveRoute name='suppliersList'}}">
+                  <a href="/suppliers">Suppliers</a>
+                </li>
               {{/if}}
             </ul>
           </li>
