--- a/client/lib/components/suppliers/profile/profile/view.html
+++ b/client/lib/components/suppliers/profile/profile/view.html
@@ -1,6 +1,6 @@
 <template name="supplierProfile">
   <div class="col-lg-12">
-    <div class="wrapper wrapper-content animated fadeInUp">
+    <div class="wrapper wrapper-content">
       <div class="ibox">
         <div class="ibox-content">
           {{> render component="basics"}}
