supplier email phone edit and product edit view

--- a/client/lib/components/suppliers/profile/basics/view.html
+++ b/client/lib/components/suppliers/profile/basics/view.html
@@ -16,8 +16,8 @@
   <div class="row">
     <div class="col-lg-5">
       <dl class="dl-horizontal">
-        <dt>Email address:</dt> <dd>{{state$basics.email}}</dd>
-        <dt>Phone number:</dt> <dd>{{state$basics.phone}}</dd>
+        <dt>Email address:</dt> <dd><a href="" id="supplierEmail">{{state$basics.email}}</a></dd>
+        <dt>Phone number:</dt> <dd><a href="" id="supplierPhone">{{state$basics.phone}}</a></dd>
       </dl>
     </div>
     <div class="col-lg-7" id="cluster_info">
