--- a/client/views/layouts/main.html
+++ b/client/views/layouts/main.html
@@ -87,4 +87,10 @@
     {{> render component = 'newStocktakeModal' name="stockModal"}}
   </div>
   <!-- /NEW STOCKTAKE MODAL -->
+
+  <!-- ADD NEW SUPPLIER-->
+  <div class="modal fade" id="addNewSupplierModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'newSupplier'}}
+  </div>
+  <!-- /ADD NEW SUPPLIER-->
 </template>
