--- a/client/lib/components/stocktake/counting/list_item/view.html
+++ b/client/lib/components/stocktake/counting/list_item/view.html
@@ -10,7 +10,11 @@
       {{/if}}
     {{/if}}
     <span class="pull-right">
-      <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionOrdered}}]
+      {{#if state$countEditable state$item.stockRef}}
+        <a href="" class="counting">{{state$item.counting}}</a> &nbsp; [{{state$item.portionOrdered}}]
+      {{else}}
+      <p data-toggle="tooltip" data-placement="top" title="You have already placed an order for this stockItem. Can't edit now. Create a new stocktake to place another order.">{{state$item.counting}} &nbsp; [{{state$item.portionOrdered}}]</p>
+      {{/if}}
     </span>
   </li>
 </template>
