--- a/client/lib/components/stocktake/order_receive/list/view.html
+++ b/client/lib/components/stocktake/order_receive/list/view.html
@@ -34,11 +34,18 @@
               <textarea name="orderReceiveNotes" id="orderReceiveNotes" class="form-control message-input-post" placeholder="Add notes here."></textarea>
             {{/if}}
             <br>
-            {{#if state$receipt.invoiceImage}}
-            {{else}}
-              <a class="btn btn-primary" id="uploadInvoice">Take a photo/ Upload Invoice</a>
+            {{#if state$receipt.temperature}}
+              <div class="col-md-3 no-padding">
+                <span class="col-md-6 pull-left"><label>Temperature: </label></span>
+                <span class="col-md-6 pull-right">{{state$receipt.temperature}} <img src="/images/celsius.png" width="18px"></span>
+              </div>
             {{/if}}
-            <a class="btn btn-primary" href="#temperatureModal" data-toggle="modal">Check temperatures</a>
+            {{#if state$isReceived}}
+            {{else}}
+              <br><br>
+              <a class="btn btn-primary" id="uploadInvoice">Take a photo/ Upload Invoice</a>
+              <a class="btn btn-primary" href="#temperatureModal" data-toggle="modal">Check temperatures</a>
+            {{/if}}
             <br>
             <div class="row col-md-12 m-t-md m-b-md">
               {{#if state$receipt.invoiceImage}}
@@ -55,7 +62,7 @@
               {{/if}}
             </div>
             <br>
-            {{#if state$receipt.received}}
+            {{#if state$isReceived}}
             {{else}}
               <a class="btn btn-primary markDeliveryReceived">Mark delivery as received</a>
             {{/if}}
