--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -131,6 +131,63 @@
               </ul>
             </div>
           </div>
+          
+          {{# if state$relatedMenus}}
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="ibox-content">
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <label class="col-sm-12">
+                        Related menus
+                      </label>
+                      <div class="col-sm-12">
+                        <table class="table">
+                          <thead>
+                            <tr>
+                              <th>
+                                Name
+                              </th>
+                              <th>
+                                Category
+                              </th>
+                              <th>
+                                Sale Price
+                              </th>
+                              <th>
+                                Status
+                              </th>
+                            </tr>
+                          </thead>
+                          {{# each state$relatedMenus}}
+                            <tbody>
+                              <tr>
+                                <td>
+                                  <a href="{{pathFor 'menuItemDetail' _id=_id}}" target="_blank">
+                                    {{name}}
+                                  </a>
+                                </td>
+                                <td>
+                                  {{state$getCategory category}}
+                                </td>
+                                <td>
+                                  {{salesPrice}}
+                                </td>
+                                <td>
+                                  {{status}}
+                                </td>
+                              </tr>
+                            </tbody>
+                          {{/ each}}
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {{/ if}}
+          
         </div>
         <div class="row m-t-lg">
           {{> render component='commentsPanel' id=state$job._id type='job'}}
