--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -99,51 +99,53 @@
             </div>
           </div>
 
-          <div class="form-group">
-            <label class="col-sm-12 text-center">
-              Related jobs
-            </label>
-            <div class="col-sm-12">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>
-                      Name
-                    </th>
-                    <th>
-                      Active Time (mins)
-                    </th>
-                    <th>
-                      Portions
-                    </th>
-                    <th>
-                      Self Life
-                    </th>
-                  </tr>
-                </thead>
-                {{# each state$relatedJobs}}
-                  <tbody>
+          {{# if state$relatedJobs}}
+            <div class="form-group">
+              <label class="col-sm-12 text-center">
+                Related jobs
+              </label>
+              <div class="col-sm-12">
+                <table class="table">
+                  <thead>
                     <tr>
-                      <td>
-                        <a href="{{pathFor 'jobItemDetailed' _id=_id}}" target="_blank">
-                          {{name}}
-                        </a>
-                      </td>
-                      <td>
-                        {{state$convertTime activeTime}}
-                      </td>
-                      <td>
-                        {{portions}}
-                      </td>
-                      <td>
-                        {{shelfLife}}
-                      </td>
+                      <th>
+                        Name
+                      </th>
+                      <th>
+                        Active Time (mins)
+                      </th>
+                      <th>
+                        Portions
+                      </th>
+                      <th>
+                        Self Life
+                      </th>
                     </tr>
-                  </tbody>
-                {{/ each}}
-              </table>
+                  </thead>
+                  {{# each state$relatedJobs}}
+                    <tbody>
+                      <tr>
+                        <td>
+                          <a href="{{pathFor 'jobItemDetailed' _id=_id}}" target="_blank">
+                            {{name}}
+                          </a>
+                        </td>
+                        <td>
+                          {{state$convertTime activeTime}}
+                        </td>
+                        <td>
+                          {{portions}}
+                        </td>
+                        <td>
+                          {{shelfLife}}
+                        </td>
+                      </tr>
+                    </tbody>
+                  {{/ each}}
+                </table>
+              </div>
             </div>
-          </div>
+          {{/ if}}
 
         </div>
         <div class="modal-footer">
