Fixed bugs with week numbers and inactive links

--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -50,7 +50,7 @@
             </a>
             <ul class="nav nav-second-level {{isActiveRoute regex='dailyRoster|weeklyRoster|templateWeeklyRoster' className='in'}}">
               <li class="{{isActiveRoute regex='weeklyRoster'}}">
-                <a href="/roster/weekly/{{week}}">Weekly</a>
+                <a href="/roster/weekly/{{year}}/{{week}}">Weekly</a>
               </li>
               <li class="{{isActiveRoute regex='dailyRoster'}}">
                 <a href="/roster/daily/{{today}}">Daily</a>
