--- a/client/lib/components/notifications/text/view.html
+++ b/client/lib/components/notifications/text/view.html
@@ -1,5 +1,5 @@
 <template name="notifiText">
-  <div class="feed-element" data-shift="{{state$notifi._id}}">
+  <div class="feed-element" data-shift="{{state$notifi._id}}" style="border-bottom: none; padding-bottom: 0;">
     <a href="#" class="pull-left">
       <img alt="image" class="img-circle" src="{{state$createdByImage}}">
     </a>
