--- a/client/lib/components/jobItems/master_list/list/view.html
+++ b/client/lib/components/jobItems/master_list/list/view.html
@@ -32,7 +32,7 @@
         </table>
       </div>
        <p>
-        <a  href="#" class="btn btn-block btn-outline btn-primary" id="loadMoreJobItems">Load More</a>
+        <a  href="#" class="btn btn-block btn-outline btn-primary hide" id="loadMoreJobItems">Load More</a>
       </p>
     </div>
   </div>
