--- a/client/lib/components/menuitems/master_list/list/view.html
+++ b/client/lib/components/menuitems/master_list/list/view.html
@@ -11,6 +11,6 @@
   {{/each}}
   </div>
   <p>
-    <a  href="#" class="btn btn-block btn-outline btn-primary" id="loadMoreMenuItems">Load More</a>
+    <a  href="#" class="btn btn-block btn-outline btn-primary hide" id="loadMoreMenuItems">Load More</a>
   </p>
 </template>
