--- a/client/lib/components/notifications/flyout/view.html
+++ b/client/lib/components/notifications/flyout/view.html
@@ -14,7 +14,7 @@
                 </div>
               </div>
             {{/each}}
-            <div class="text-center link-block">
+            <div class="text-center link-block" style="border-top: 1px solid #E7EAEC; padding-top: 15px;">
               <a href="#" class="markAllAsRead">
                 <strong>Mark All As Read</strong>
               </a>
