Added output of Confirm and Reject buttons

--- a/client/lib/components/notifications/text/view.html
+++ b/client/lib/components/notifications/text/view.html
@@ -10,6 +10,9 @@
       <small class="text-muted">
         <i class="fa fa-{{state$icon}}"></i> {{timeFormat state$notifi.createdOn}}
       </small>
+      <div>
+        {{{state$notifiText}}}
+      </div>
       <div class="actions">
         {{> render component='notifiButtons' noti=state$notifi}}
       </div>
