--- a/client/lib/components/stocktake/counting/areas/area_box/view.html
+++ b/client/lib/components/stocktake/counting/areas/area_box/view.html
@@ -1,12 +1,11 @@
 <template name="areaBox">
-  <div class="areaBox">
+  <div class="areaBox" data-id="{{state$item._id}}">
     {{#if state$editable}}
     <div class="box-wrapper pull-right" style="display: none;">
       <span class="box-remove glyphicon glyphicon-remove removeArea" data-id="{{state$item._id}}" data-type="{{state$item.type}}" style="margin: 2px"></span>
     </div>
     {{/if}}
-    <a class="btn btn-block {{#if activeG state$item._id}} btn-info {{/if}} {{#if activeS state$item._id}} btn-info {{/if}} {{#if inActive state$item._id}} btn-default {{/if}} btn-sm {{state$item.class}} m-b-sm" 
-    data-id="{{state$item._id}}"  
+    <a class="btn btn-block {{#if activeG state$item._id}} btn-info {{/if}} {{#if activeS state$item._id}} btn-info {{/if}} {{#if inActive state$item._id}} btn-default {{/if}} btn-sm {{state$item.class}} m-b-sm"   
     role="button" 
     data-toggle="collapse" href="#{{state$item._id}}" 
     aria-expanded="false" aria-controls="{{state$item._id}}">
