--- a/client/views/main_views/home.html
+++ b/client/views/main_views/home.html
@@ -23,9 +23,9 @@
       <div class="col-lg-12">
         <hr>
         <div class="jumbotron">
-          <h1>Welcome to Hero Chef.</h1>
+          <h1>Welcome to Hospo Hero.</h1>
           <p>
-            Thanks for coming. Kitchen's are complicated workplaces. Hero Chef aims to make
+            Thanks for coming. Kitchen's are complicated workplaces. Hospo Hero aims to make
             running a busy kitchen easy. Taking a lot of the manual tasks and making them quick, easy and
             accurate.
           </p>
