--- a/client/views/main_views/footer.html
+++ b/client/views/main_views/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
   <div class="footer">
     <div>
-      <strong>Copyright</strong> Hero Chef &copy; 2014-2015
+      <strong>Copyright</strong> Hospo Hero &copy; 2014-2015
     </div>
   </div>
 </template>
