--- a/client/stylesheets/14_index.less
+++ b/client/stylesheets/14_index.less
@@ -1,5 +1,15 @@
 @import "globals/variables.import.less";
 
+
+.user-bio {
+  .m-b-md {
+    > img {
+      max-width: 216px;
+      max-height: 216px;
+    }
+  }
+}
+
 .switch-user {
   .user-bio {
     margin: 1em 0;
