--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -27,7 +27,11 @@
             <select name="sections" class="form-control">
             <option value="" selected="selected">Select Section</option>
             {{#each state$sections}}
-              <option value="{{_id}}">{{name}}</option>
+              {{# if isSelectedJobType}}
+                <option value="{{_id}}" selected>{{name}}</option>
+              {{else}}
+                <option value="{{_id}}">{{name}}</option>
+              {{/ if}}
             {{/each}}
             </select>
           </div>
