--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -110,13 +110,13 @@
               <option value="">Select frequency</option>
               <option value="Daily">Daily</option>
               <option value="Weekly">Weekly</option>
-              <option value="EveryNWeeks">Every N weeks</option>
+              <option value="EveryXWeeks">Every X weeks</option>
             </select>
           </div>
         </div>
         {{#if isRecurringDaily}}
         {{else}}
-          {{#if isRecurringEveryNWeeks}}
+          {{#if isRecurringEveryXWeeks}}
             <div class="form-group">
               <label class="col-sm-2 control-label">Step</label>
               <div class="col-sm-10">
