--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -110,7 +110,7 @@
               <option value="">Select frequency</option>
               <option value="Daily">Daily</option>
               <option value="Weekly">Weekly</option>
-              <option value="EveryXWeeks">Every X weeks</option>
+              <option value="Every X Weeks">Every X Weeks</option>
             </select>
           </div>
         </div>
