--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -91,7 +91,7 @@
                 </li>
                 {{#if state$isRecurring}}
                   <li class="list-group-item">
-                    <span class="pull-right">{{state$job.frequency}}</span>Repeat Frequency
+                    <span class="pull-right">{{state$frequency}}</span>Repeat Frequency
                   </li>
                   {{#if state$isWeekly}}
                     <li class="list-group-item">
