--- a/client/lib/components/jobItems/detail/view.html
+++ b/client/lib/components/jobItems/detail/view.html
@@ -93,11 +93,11 @@
                   <li class="list-group-item">
                     <span class="pull-right">{{state$frequency}}</span>Repeat Frequency
                   </li>
-                  {{#if state$isWeekly}}
+                  {{#unless state$isDaily}}
                     <li class="list-group-item">
                       <span class="pull-right">{{state$repeatOnDays}}</span>Repeat On
                     </li>
-                  {{/if}}
+                  {{/unless}}
                   <li class="list-group-item">
                     <span class="pull-right">{{state$repeatAt}}</span>Repeat At
                   </li>
