--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -118,9 +118,9 @@
         {{else}}
           {{#if isRecurringEveryXWeeks}}
             <div class="form-group">
-              <label class="col-sm-2 control-label">Step</label>
+              <label class="col-sm-2 control-label"></label>
               <div class="col-sm-10">
-                <input type="number" name="step" class="" value="{{state$step}}" min="2">
+                  <p>Repeat every <input type="number" name="step" class="" value="{{state$step}}" min="2"> weeks.</p>
               </div>
             </div>
           {{/if}}
