--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -13,7 +13,7 @@
                 <div class="dropdown">
                   <select name="type" class="form-control m-b jobType">
                     {{#each state$jobTypes}}
-                    <option value="{{this}}">{{this}}</option>
+                    <option value="{{this._id}}">{{this.name}}</option>
                     {{/each}}
                   </select>
                 </div>
