--- a/client/lib/components/roster/jobs/submit/view.html
+++ b/client/lib/components/roster/jobs/submit/view.html
@@ -41,7 +41,13 @@
             </div>
             <div class="form-group">
               <label class="col-sm-4 control-label">Active Time</label>
-              <div class="col-sm-6 control-label textTime" style="text-align: left">{{#if state$activeTimes}}{{state$activeTimes}}{{else}}No active time{{/if}}</div>
+              <div class="col-sm-6 control-label textTime" style="text-align: left">
+                {{#if state$activeTimes}}
+                  {{state$activeTimes}}
+                {{else}}
+                  No active time
+                {{/if}}
+              </div>
             </div>
             {{else}}
             <div class="form-group">
