--- a/client/lib/components/users/item/view.html
+++ b/client/lib/components/users/item/view.html
@@ -1,9 +1,9 @@
 <template name="userDetailed">
   <tr data-id="{{state$user._id}}">
     {{#if state$permittedManagerAndAdmin}}
-    <td><a href="/user/profile/{{state$user._id}}">{{state$user.username}}</a></td>
+    <td style="{{state$userStyle}}"><a href="/user/profile/{{state$user._id}}">{{state$user.username}}</a></td>
     {{else}}
-    <td>{{state$user.username}}</td>
+    <td style="{{state$userStyle}}">{{state$user.username}}</td>
     {{/if}}
     <td>{{{state$type}}}</td>
     <td>{{state$email}}</td>
@@ -28,6 +28,7 @@
       </td>
     {{/if}}
     <td>
+<!--
     {{#if state$permittedManagerAndAdmin}}
       {{#if state$ifMe}}
         {{#if state$user.isActive}} 
@@ -37,6 +38,7 @@
         {{/if}}
       {{/if}}
     {{/if}}
+-->
     </td>
   </tr>
 </template>
