--- a/client/lib/components/users/profile/profile/view.html
+++ b/client/lib/components/users/profile/profile/view.html
@@ -1,4 +1,6 @@
 <template name="profile">
+  {{> render component="futureShiftsModal"}}
+
   <div class="col-md-4">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
