Added archive buttons to JobItems

--- a/client/lib/components/jobItems/master_list/item/view.html
+++ b/client/lib/components/jobItems/master_list/item/view.html
@@ -11,7 +11,18 @@
       <td>{{#if state$isPrep}} $ {{state$cost}} {{else}} -NA-{{/if}}</td>
     {{/if}}
     <td>
-      <button class="btn btn-primary btn-sm viewDetail">View Item</button>
+      <button class="btn btn-primary btn-sm viewDetail" title="View Item">
+        <i class="fa fa-eye"></i> View
+      </button>
+      {{# if state$isPermitted}}
+        <button class="btn btn-warning btn-sm archive">
+        {{# if state$isArchive}}
+          <i class="fa fa-dropbox"></i> Restore
+        {{else}}
+          <i class="fa fa-archive"></i> Archive
+        {{/ if}}
+        </button>
+      {{/ if}}
     </td>
   </tr>
 </template>
