Made some changes to archivation process of JobItems

--- a/client/lib/components/jobItems/master_list/item/view.html
+++ b/client/lib/components/jobItems/master_list/item/view.html
@@ -17,9 +17,9 @@
       {{# if state$isPermitted}}
         <button class="btn btn-warning btn-sm archive">
         {{# if state$isArchive}}
-          <i class="fa fa-dropbox"></i> Restore
+          <i class="fa fa-dropbox"></i>
         {{else}}
-          <i class="fa fa-archive"></i> Archive
+          <i class="fa fa-archive"></i>
         {{/ if}}
         </button>
       {{/ if}}
