added slaes forecast for cafe

--- a/client/lib/components/roster/weekly/top/sales/view.html
+++ b/client/lib/components/roster/weekly/top/sales/view.html
@@ -1,4 +1,4 @@
 <template name="salesTr">
-  <td>$2000</td>
+  <td>$<a href="" class="editableSalesForecast" data-date="{{state$doc.date}}"></a></td>
   <td class="text-info">$2200</td>
 </template>
