--- a/client/lib/components/stock/edit/view.html
+++ b/client/lib/components/stock/edit/view.html
@@ -150,7 +150,12 @@
         </div>
         <div class="modal-footer">
           {{#if state$isManagerOrAdmin}}
-          <button type="button" class="btn btn-danger deleteIngredient" data-id="{{item._id}}">Delete</button>
+            {{# if state$isArchive}}
+              <button type="button" class="btn btn-warning archiveIngredient" data-id="{{item._id}}">Restore</button>
+              <button type="button" class="btn btn-danger deleteIngredient" data-id="{{item._id}}">Delete</button>
+            {{else}}
+              <button type="button" class="btn btn-warning archiveIngredient" data-id="{{item._id}}">Archive</button>
+            {{/ if}}
           {{/if}}
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           {{#if state$isManagerOrAdmin}}
