--- a/client/lib/components/stock/master_list/item/view.html
+++ b/client/lib/components/stock/master_list/item/view.html
@@ -7,6 +7,18 @@
     <td>$ {{state$item.costPerPortion}}</td>
     <td>{{state$item.portionUsed}}</td>
     <td><p data-toggle="tooltip" data-placement="top" title="How many {{state$item.portionUsed}}s in a {{state$item.portionOrdered}}">{{state$item.unitSize}}</p></td>
-    <td><a data-toggle="modal" class="btn btn-primary btn-sm editIngredient">View Item</a></td>
+    <td>
+      <a data-toggle="modal" class="btn btn-primary btn-sm editIngredient">View Item</a>
+
+      {{# if state$isManagerOrAdmin}}
+        <button class="btn btn-warning archiveIngredient">
+          {{# if state$isArchive}}
+            <i class="fa fa-dropbox"></i>
+          {{else}}
+            <i class="fa fa-archive"></i>
+          {{/ if}}
+        </button>
+      {{/ if}}
+    </td>
   </tr>
 </template>
