--- a/client/lib/components/jobItems/master_list/list/view.html
+++ b/client/lib/components/jobItems/master_list/list/view.html
@@ -1,8 +1,7 @@
 <template name="jobItemsList">
-  <div class="col-lg-12">
     <div class="row">
       <div class="col-sm-12">
-        <input type="text" name="searchJobItems"  id="searchJobItemsBox" class="form-control col-sm-8" placeholder="Search from Name">
+        <input type="text" name="searchJobItems"  id="searchJobItemsBox" class="form-control col-sm-8" placeholder="Search...">
       </div>
     </div>
     <hr>
@@ -35,5 +34,4 @@
         <a  href="#" class="btn btn-block btn-outline btn-primary hide" id="loadMoreJobItems">Load More</a>
       </p>
     </div>
-  </div>
 </template>
