--- a/client/lib/components/users/list/view.html
+++ b/client/lib/components/users/list/view.html
@@ -1,30 +1,29 @@
 <template name="usersList">
-  <div class="ibox-content">
-    <br>
-    <div class="table-responsive">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Username</th>
-            <th>Type </th>
-            <th>Email Address </th>
-            {{#if state$permittedAdmin}}
-            <th>Action</th>
-            {{/if}}
-            {{#if state$permittedManagerAndAdmin}}
-            <th>Archive</th>
-            {{/if}}
-          </tr>
-        </thead>
-        <tbody>
-        {{#each state$activeUsers}}
-          {{> render component="userDetailed" user=this}}
-        {{/each}}
-        {{#each state$deactiveUsers}}
-          {{> render component="userDetailed" user=this}}
-        {{/each}}
-        </tbody>
-      </table>
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Type</th>
+                    <th>Email Address</th>
+                    {{#if state$permittedAdmin}}
+                        <th>Action</th>
+                    {{/if}}
+                    {{#if state$permittedManagerAndAdmin}}
+                        <th>Archive</th>
+                    {{/if}}
+                </tr>
+                </thead>
+                <tbody>
+                {{#each state$activeUsers}}
+                    {{> render component="userDetailed" user=this}}
+                {{/each}}
+                {{#each state$deactiveUsers}}
+                    {{> render component="userDetailed" user=this}}
+                {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
 </template>
