--- a/client/views/main_views/reports/current_stocks_view.html
+++ b/client/views/main_views/reports/current_stocks_view.html
@@ -1,7 +1,7 @@
 <template name="currentStocksReportView">
   {{> render component="pageHeading" title="Daily Stocks Report" category='Reports' name="currentStocksReport"}}
 
-  <div class="wrapper wrapper-content animated fadeInRight">
+  <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
