--- a/client/views/main_views/reports/team_hours_view.html
+++ b/client/views/main_views/reports/team_hours_view.html
@@ -1,7 +1,7 @@
 <template name="teamHoursMainView">
   {{> render component="pageHeading" title="Team Recorded Hours Report" category='Reports' name="teamHoursReport"}}
 
-  <div class="wrapper wrapper-content animated fadeInRight">
+  <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
